# jonmo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  agents.md  justfile  repo_prompt.ncl  repo_prompt_input.md  rustfmt.toml  sync_readme_example.py
.github/workflows/: build_example.yaml  cleanup_pr_previews.yaml  examples_on_main.yaml  pr_previews.yaml
examples/: basic.rs  basic_builder.rs  basic_builder_inject.rs  counter.rs  filters.rs  letters.rs  lifetime_list.rs  lifetimes.rs  test.rs  utils.rs
examples/webgl2/basic/: index.html  jonmo-3cc45b3b53458de.js  jonmo-40a658d28b881872.js  jonmo-49566322156dc316.js  jonmo-90a2d0519ed756da.js  jonmo-c5b59e9c7367feb.js  jonmo-eb037cf3c620a51e.js
examples/webgl2/basic_builder/: index.html  jonmo-68e2ac501e6299f9.js  jonmo-742903696feec329.js  jonmo-94ca4818258aad63.js  jonmo-b93f7970fefd724d.js  jonmo-f3ceb9d76f14ea7c.js
examples/webgl2/basic_builder_inject/: index.html  jonmo-49424e509fb11d1d.js  jonmo-6fbf36ce8cb1a24.js  jonmo-a9e81219344800c8.js  jonmo-c185419d5cc180ca.js
examples/webgl2/counter/: index.html  jonmo-6a29672742599d47.js  jonmo-922a22710fef2053.js  jonmo-97282bdf337bfd6a.js  jonmo-cd3c6e7a9b058aec.js  jonmo-dfb4ea2ed13d8d3c.js  jonmo-e11907f59327c49e.js
examples/webgl2/filters/: index.html  jonmo-494aaf83190bd6db.js  jonmo-5d23ae37cf313cef.js  jonmo-8fcfa2c18d6bc772.js  jonmo-b5b205191dfb5d4e.js  jonmo-c206bf8e6142766.js  jonmo-d7a8394810e3c480.js
examples/webgl2/letters/: index.html  jonmo-23b87d2bfef37477.js  jonmo-4486c5cab2ee4a30.js  jonmo-9c36a78999ee03ef.js  jonmo-a451b021f54b6d3d.js  jonmo-b4a9b6ca74224ce8.js  jonmo-f0dfbd175f4359dc.js
examples/webgl2/lifetimes/: index.html  jonmo-1f43451fc9111fef.js  jonmo-8b2034c63c505c31.js  jonmo-bb5280cd6a9f111b.js  jonmo-bee99c618f0c8b6e.js  jonmo-ca2e7e1e942bac9a.js  jonmo-e9aad495dd4438e3.js
examples/webgpu/basic/: index.html  jonmo-2c98760715b8485a.js  jonmo-347dedfdda0ff514.js  jonmo-6767aa3c5bf6124b.js  jonmo-9a62c5b17146dd8f.js  jonmo-ba3f1ce2c1c910cc.js  jonmo-e10daea0d48da0bd.js
examples/webgpu/basic_builder/: index.html  jonmo-5d56cfb92a4006a.js  jonmo-a7d1f8fd75d130e2.js  jonmo-bf0c6b480d87edbb.js  jonmo-c6488fe1879722d1.js  jonmo-cdc444e967751577.js  jonmo-d6fcbab337f3cb1d.js
examples/webgpu/basic_builder_inject/: index.html  jonmo-7130e8ad6c2132c1.js  jonmo-92b509eed265bc86.js  jonmo-d5f1cbba3e523dbf.js  jonmo-ebe24cfe27112cd7.js  jonmo-ec7d1344a90cdac0.js
examples/webgpu/counter/: index.html  jonmo-1dcd63b3dd166d48.js  jonmo-5c671cb4763ab6a1.js  jonmo-5da709f360d7d884.js  jonmo-7280db27f68acbfd.js  jonmo-db8b92420317322c.js  jonmo-ed76b144a91a593a.js
examples/webgpu/filters/: index.html  jonmo-1d4b7f38e4e867f2.js  jonmo-1f7ab642b9aa97b6.js  jonmo-6892f58c535ffd5d.js  jonmo-aa1744eb6ceaff64.js  jonmo-c6f876afdabd8d23.js  jonmo-f0f9e4ef88b6bbf9.js
examples/webgpu/letters/: index.html  jonmo-36b403fcb430b4de.js  jonmo-40b270c173fe4c6f.js  jonmo-59feb0ab0a9a37c.js  jonmo-670fc0a525cc2523.js  jonmo-b19e990b7d3ae66c.js  jonmo-b97de5d7c2a2a935.js
examples/webgpu/lifetimes/: index.html  jonmo-189cccfcee03eb1.js  jonmo-6cd58757e9f2ea85.js  jonmo-7a65ff88c171eb01.js  jonmo-acafed66e28b1e1e.js  jonmo-c9d3a95ceced6351.js  jonmo-db93e3f62da1b742.js
nickel/: Nickel-pkg.ncl  main.ncl
pr_previews/10/webgl2/basic/: index.html  jonmo-90a2d0519ed756da.js
pr_previews/10/webgl2/basic_builder/: index.html  jonmo-f3ceb9d76f14ea7c.js
pr_previews/10/webgl2/basic_builder_inject/: index.html  jonmo-a9e81219344800c8.js
pr_previews/10/webgl2/counter/: index.html  jonmo-922a22710fef2053.js
pr_previews/10/webgl2/filters/: index.html  jonmo-5d23ae37cf313cef.js
pr_previews/10/webgl2/letters/: index.html  jonmo-f0dfbd175f4359dc.js
pr_previews/10/webgl2/lifetimes/: index.html  jonmo-bee99c618f0c8b6e.js
pr_previews/10/webgpu/basic/: index.html  jonmo-ba3f1ce2c1c910cc.js
pr_previews/10/webgpu/basic_builder/: index.html  jonmo-d6fcbab337f3cb1d.js
pr_previews/10/webgpu/basic_builder_inject/: index.html  jonmo-d5f1cbba3e523dbf.js
pr_previews/10/webgpu/counter/: index.html  jonmo-db8b92420317322c.js
pr_previews/10/webgpu/filters/: index.html  jonmo-1d4b7f38e4e867f2.js
pr_previews/10/webgpu/letters/: index.html  jonmo-36b403fcb430b4de.js
pr_previews/10/webgpu/lifetimes/: index.html  jonmo-189cccfcee03eb1.js
pr_previews/12/webgl2/basic/: index.html  jonmo-4dbd4d70cea730e0.js
pr_previews/12/webgl2/basic_builder/: index.html  jonmo-27917f7f8467846c.js
pr_previews/12/webgl2/basic_builder_inject/: index.html  jonmo-a6d89141380b88d5.js
pr_previews/12/webgl2/counter/: index.html  jonmo-f856ece5ffc378f7.js
pr_previews/12/webgl2/filters/: index.html  jonmo-7caadcde289ce3fd.js
pr_previews/12/webgl2/letters/: index.html  jonmo-95b546f6e4bbf6fd.js
pr_previews/12/webgl2/lifetimes/: index.html  (+1 more)
src/: builder.rs  graph.rs  lib.rs  signal.rs  signal_map.rs  signal_vec.rs  tree.rs  utils.rs
(+401 files in other folders)
