[package]
name = "jonmo"
version = "0.2.0"
edition = "2024"
categories = ["asynchronous", "gui", "game-development"]
description = "ergonomic Bevy-native reactivity powered by FRP signals"
exclude = ["assets/", ".github/", "crates/"]
keywords = ["reactive", "signals", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databasedav/jonmo"
documentation = "https://docs.rs/jonmo"

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[dependencies]
bevy_app = { version = "0.16", default-features = false }
bevy_derive = { version = "0.16", default-features = false }
bevy_ecs = { version = "0.16", default-features = false }
bevy_log = { version = "0.16", default-features = false }
bevy_platform = { version = "0.16", default-features = false }
bevy_time = { version = "0.16", default-features = false }
enclose = "1.2"
dyn-clone = "1.0"
apply = "0.3"
cfg-if = "1.0"

[features]
debug = ["bevy/bevy_ui_debug"]

[dev-dependencies]
bevy = "0.16"
rand = "0.9"

[[example]]
name = "basic"
path = "examples/basic.rs"
doc-scrape-examples = true

[[example]]
name = "basic_builder"
path = "examples/basic_builder.rs"
doc-scrape-examples = true

[[example]]
name = "basic_builder_inject"
path = "examples/basic_builder_inject.rs"
doc-scrape-examples = true

[[example]]
name = "counter"
path = "examples/counter.rs"
doc-scrape-examples = true

[[example]]
name = "lifetimes"
path = "examples/lifetimes.rs"
doc-scrape-examples = true

[[example]]
name = "letters"
path = "examples/letters.rs"
doc-scrape-examples = true

[[example]]
name = "utils"
path = "examples/utils.rs"
doc-scrape-examples = true
crate-type = ["lib"]
